[gd_scene load_steps=7 format=3 uid="uid://bsjjvkp0oeg4a"]

[ext_resource type="FontFile" uid="uid://cmjjk4hriqcck" path="res://scr/Assets/GrapeSoda.ttf" id="1_dbegy"]
[ext_resource type="Script" uid="uid://bu85toj1h4qf5" path="res://scr/UserInterface/InGameMenu/in_game_menu.gd" id="1_exho8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dbegy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exho8"]
bg_color = Color(0.593134, 0.593134, 0.593134, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_umay3"]
bg_color = Color(0.205117, 0.205117, 0.205117, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qqlhf"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[node name="InGameMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_exho8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.5
offset_top = -107.5
offset_right = 220.5
offset_bottom = 179.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_dbegy")
theme_override_styles/hover = SubResource("StyleBoxFlat_exho8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_umay3")
theme_override_styles/normal = SubResource("StyleBoxFlat_qqlhf")
text = "Resume"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_dbegy")
theme_override_styles/hover = SubResource("StyleBoxFlat_exho8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_umay3")
theme_override_styles/normal = SubResource("StyleBoxFlat_qqlhf")
text = "Restart"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_dbegy")
theme_override_styles/hover = SubResource("StyleBoxFlat_exho8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_umay3")
theme_override_styles/normal = SubResource("StyleBoxFlat_qqlhf")
text = "Settings"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_dbegy")
theme_override_styles/hover = SubResource("StyleBoxFlat_exho8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_umay3")
theme_override_styles/normal = SubResource("StyleBoxFlat_qqlhf")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -234.0
offset_right = 229.0
offset_bottom = -118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 7
theme_override_fonts/font = ExtResource("1_dbegy")
theme_override_font_sizes/font_size = 81
text = "The Trice Dice"

[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
